--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Flashdrop"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".SettingsActivity" android:exported="false" />
+
         <activity android:name=".HistoricoActivity" />
         <activity android:name=".AnexoActivity" />
+        <activity android:name=".SobreActivity" />
+        <activity android:name=".ComoUsarActivity" />
+        <activity android:name=".DeviceListActivity" />
+        <activity
+            android:name="com.example.flash_drop.HelpActivity"
+            android:exported="false" />
 
     </application>
-
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"
+        tools:ignore="CoarseFineLocation" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 </manifest>
